--- a/scss/right-side-nav.scss
+++ b/scss/right-side-nav.scss
@@ -26,7 +26,10 @@
         flex-shrink: 0;
         border-bottom: 1px solid $border-grey;
         justify-content: space-between;
-        margin-bottom: 15px;
+        @media ($sm-1679) {
+            padding: 15px;
+            min-height: 71px;
+        }
         @media ($sm-479) {
             padding: 20px 15px;
             min-height: auto;
@@ -44,7 +47,7 @@
                 color: $text-primary-dark;
                 font-size: 18px;
                 font-weight: 500;
-                @media ($sm-479) {
+                @media ($sm-1679) {
                     font-size: 16px;
                 }
             }
@@ -62,6 +65,9 @@
         flex-grow: 1;
         overflow-y: auto;
         padding: 25px;
+        @media (max-width: 400px) {
+            padding: 25px 18px;
+        }
         &.custom-scroll {
             &::-webkit-scrollbar {
                 width: 8px;
@@ -90,8 +96,19 @@
                 justify-content: space-between;
                 align-items: center;
                 .val-left{
-                    font-size: 18px;
-                    font-weight: 600;
+                    flex-grow: 1;
+                    padding-right: 10px;
+                    .val-inp{
+                        background-color: transparent;
+                        border: none;
+                        font-size: 18px;
+                        font-weight: 600;
+                        color: #fff;
+                        width: 100%;
+                        @media ($sm-1679) {
+                            font-size: 16px;
+                        }
+                    }
                 }
                 .data-block-right{
                     .select-block{
@@ -132,6 +149,9 @@
                                 font-weight: 500;
                                 color: #fff;
                                 margin-bottom: 2px;
+                                @media ($sm-1679) {
+                                    font-size: 13px;
+                                }
                             }
                             p{
                                 margin: 0;
@@ -145,6 +165,9 @@
             .range-data-wrapper{
                 padding-top: 18px;
                 align-items: center;
+                @media ($sm-1679) {
+                    padding-top: 14px;
+                }
                 .amnt-left{
                     font-size: 14px;
                     color: #697081;
@@ -163,6 +186,9 @@
                         font-size: 12px;
                         margin-left: 8px;
                         transition: .3s;
+                        @media ($sm-1679) {
+                            font-size: 11px;
+                        }
                         &:hover{
                             opacity: .8;
                         }
@@ -186,10 +212,21 @@
                     color: #697081;
                 }
             }
+            .type-select{
+                font-size: 13px;
+                font-weight: 500;
+                color: #697081;
+                background-color: transparent;
+                border: none;
+            }
         }
         .lg-btn-block{
             .primary-btn{
                 padding: 14px;
+                font-size: 15px;
+                @media ($sm-1679) {
+                    font-size: 14px;
+                }
             }
         }
 
@@ -201,10 +238,16 @@
                 margin-bottom: 20px;
                 color: #fff;
                 font-size: 15px;
+                @media ($sm-1679) {
+                    font-size: 14px;
+                }
             }
             .props-dif-wrapper{
                 justify-content: space-between;
                 margin-bottom: 30px;
+                @media ($sm-1679) {
+                    margin-bottom: 20px;
+                }
                 .sep{
                     color: #fff;
                     font-size: 14px;
@@ -232,10 +275,16 @@
                             margin-bottom: 5px;
                             font-size: 14px;
                             font-weight: 500;
+                            @media ($sm-1679) {
+                                font-size: 13px;
+                            }
                         }
                         p{
                             margin: 0;
                             font-size: 14px;
+                            @media ($sm-1679) {
+                                font-size: 13px;
+                            }
                         }
                     }
 
